set register pqge

--- a/_shared/templates/registration/register.html
+++ b/_shared/templates/registration/register.html
@@ -169,13 +169,10 @@
                             </div>
                         </div>
                     </form>
-                    <p class="mb-1">
-                        <br>
-                        <a href="#">Mot de passe oublié?</a>
-                    </p>
                     <p class="mb-0">
                         
-                        <a href="{% url 'register-new-user' %}" class="text-center"> Pas de compte? Inscrivez-vous !</a>
+                        <a href="{% url 'login' %}" class="text-center"> Vous avez déjà un compte ? Connectez-vous !</a>
+                        
                     </p>
                     <p class="mb-1">
                         
