action and comment

--- a/AlertsManagement/templates/alerts/create_alert.html
+++ b/AlertsManagement/templates/alerts/create_alert.html
@@ -40,6 +40,8 @@
                                 <fieldset>
                                     
                                     <input type="text"  name="alert_id" id="alert_id" class="hidden"/>
+                                    <input type="text"  name="comment-template" id="comment-template" class="hidden" value="{% url 'get-comment-template' %}"/>
+                                    <input type="text"  name="registry-url" id="registry-url" class="hidden" value="{% url 'alerts-registry' 1 %}"/>
                                     <div class="form-group">
                                         <label for="date_alert">Date <span class="required">*</span></label>
                                         <input type="date" name="date_alert" id="date_alert" class="form-control" data-date="" data-date-format="DD/MM/YYYY" format="dd/mm/yyyy" required="">
@@ -113,10 +115,6 @@
                                             <img src="https://img.icons8.com/color/96/000000/ok--v2.png" class="fit-image">
                                         </div>
                                         
-                                    </div>
-                                    <div class="row justify-content-center">
-                                        <br><br>
-                                        <a href="{% url 'alerts-registry' 1 %}" style="padding-top : 10px">Voir la liste des alertes</a>
                                     </div>
                                         
                                 </fieldset>
